--- a/boilerplate/index.mjml
+++ b/boilerplate/index.mjml
@@ -8,7 +8,7 @@
     <mj-breakpoint width="480px" />
 
     <!-- custom fonts (only working for apple mail and iphone/ipad) -->
-    <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" />
+    <mj-font name="Indie Flower" href="https://fonts.googleapis.com/css?family=Indie+Flower:400" />
     <mj-style>
       @font-face {
         font-family: 'Custom';
@@ -20,7 +20,7 @@
 
     <mj-attributes>
       <!-- be careful: always provide a good fallback font for outlook, e.g. arial -->
-      <mj-all padding="0" font-family="Roboto, Custom, Arial, sans-serif" color="#333333" align="center" vertical-align="top" />
+      <mj-all padding="0" font-family="'Indie Flower', Custom, Arial, sans-serif" color="#333333" align="center" vertical-align="top" />
       <mj-body width="600px" background-color="#eee" />
       <mj-wrapper padding="0px" background-color="transparent" />
       <mj-section padding="20px" background-color="#ffffff" />
