--- a/boilerplate/_inc/columns-inline.mjml
+++ b/boilerplate/_inc/columns-inline.mjml
@@ -1,27 +1,47 @@
 <mj-section>
-  <mj-column>
+    <mj-column>
+        <mj-spacer height="40px" />
 
-    <mj-spacer height="40px" />
+        <mj-text>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+            sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </mj-text>
 
-    <mj-text>
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </mj-text>
+        <!-- use this instead of mj-group; also include line-height:0px to prevent outlook from cutting off images -->
+        <mj-text padding="40px 0" line-height="0px">
+            <a href="https://www.facebook.com" target="_blank"
+                ><img style="padding-bottom: 4px; vertical-align: middle;" src="_assets/32x32.jpg" width="32" /></a
+            >&nbsp;
+            <a href="https://www.facebook.com" target="_blank"
+                ><img style="padding-bottom: 4px; vertical-align: middle;" src="_assets/32x32.jpg" width="32" /></a
+            >&nbsp;
+            <a href="https://www.facebook.com" target="_blank"
+                ><img style="padding-bottom: 4px; vertical-align: middle;" src="_assets/32x32.jpg" width="32" /></a
+            >&nbsp;
+            <a href="https://www.facebook.com" target="_blank"
+                ><img style="padding-bottom: 4px; vertical-align: middle;" src="_assets/32x32.jpg" width="32" /></a
+            >&nbsp;
+            <a href="https://www.facebook.com" target="_blank"
+                ><img style="padding-bottom: 4px; vertical-align: middle;" src="_assets/32x32.jpg" width="32" /></a
+            >&nbsp;
+            <a href="https://www.facebook.com" target="_blank"
+                ><img style="padding-bottom: 4px; vertical-align: middle;" src="_assets/32x32.jpg" width="32"
+            /></a>
+        </mj-text>
 
-    <!-- use this instead of mj-group; also include line-height:0px to prevent outlook from cutting off images -->
-    <mj-text padding="40px 0" line-height="0px">
-      <a href="https://www.facebook.com" target="_blank"><img style="padding-bottom:4px;vertical-align:middle" src="_assets/32x32.jpg" width="32" /></a>&nbsp;
-      <a href="https://www.facebook.com" target="_blank"><img style="padding-bottom:4px;vertical-align:middle" src="_assets/32x32.jpg" width="32" /></a>&nbsp;
-      <a href="https://www.facebook.com" target="_blank"><img style="padding-bottom:4px;vertical-align:middle" src="_assets/32x32.jpg" width="32" /></a>&nbsp;
-      <a href="https://www.facebook.com" target="_blank"><img style="padding-bottom:4px;vertical-align:middle" src="_assets/32x32.jpg" width="32" /></a>&nbsp;
-      <a href="https://www.facebook.com" target="_blank"><img style="padding-bottom:4px;vertical-align:middle" src="_assets/32x32.jpg" width="32" /></a>&nbsp;
-      <a href="https://www.facebook.com" target="_blank"><img style="padding-bottom:4px;vertical-align:middle" src="_assets/32x32.jpg" width="32" /></a>
-    </mj-text>
+        <mj-text>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+            sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </mj-text>
 
-    <mj-text>
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </mj-text>
-
-    <mj-spacer height="40px" />
-
-  </mj-column>
+        <mj-spacer height="40px" />
+    </mj-column>
 </mj-section>
