--- a/boilerplate/_inc/button.mjml
+++ b/boilerplate/_inc/button.mjml
@@ -1,6 +1,6 @@
 <mj-section>
     <mj-column>
         <!-- always provide an explicit link (otherwise outlook.com strips those tags) -->
-        <mj-button href="https://red.de">Button</mj-button>
+        <mj-button href="https://red.de" css-class="hover">Button</mj-button>
     </mj-column>
 </mj-section>
